Add layout partials. Add favicon. Add attributions page.
Signed-off-by: mc962 <11969409+mc962@users.noreply.github.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale || 'en' %>">
   <head>
-    <title>OnTheRails</title>
+    <title>On The Rails</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Interesting technical topics.">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= favicon_link_tag %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= yield :head_css %>
+
     <%= javascript_importmap_tags %>
+    <%= yield :head_js %>
   </head>
 
   <body>
+    <%= render partial: 'layouts/header' %>
+
+    <%= render partial: 'application/flash' %>
+
     <%= yield %>
+
+    <%= render partial: 'layouts/footer' %>
   </body>
 </html>
