--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,23 +5,23 @@
         <%= link_to 'Home', root_path %>
       </div>
 
-<!--      <ul class="site-nav-links">-->
-        <%# if user_signed_in? %>
+      <ul class="site-nav-links">
+        <% if user_signed_in? %>
 <!--          <li class="site-nav-link">-->
-            <%#= link_to 'Manage Recipes', manage_recipes_path %>
+            <%#= link_to 'Posts', manage_recipes_path %>
 <!--          </li>-->
-<!--          <li class="site-nav-link">-->
-            <%#= link_to 'Sign Out', destroy_user_session_path, data: {turbo_method: :delete} %>
-<!--          </li>-->
-        <%# else %>
-<!--          <li class="site-nav-link">-->
-            <%#= link_to 'Sign Up', new_user_registration_path %>
-<!--          </li>-->
-<!--          <li class="site-nav-link">-->
-            <%#= link_to 'Sign In', new_user_session_path %>
-<!--          </li>-->
-        <%# end %>
-<!--      </ul>-->
+          <li class="site-nav-link">
+            <%= link_to 'Sign Out', destroy_user_session_path, data: {turbo_method: :delete} %>
+          </li>
+        <% else %>
+          <li class="site-nav-link">
+            <%= link_to 'Sign Up', new_user_registration_path %>
+          </li>
+          <li class="site-nav-link">
+            <%= link_to 'Sign In', new_user_session_path %>
+          </li>
+        <% end %>
+      </ul>
     </nav>
   </section>
 </header>
