--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,15 +21,15 @@
     <%= form.text_area :content %>
   </div>
 
-  <div>
-    <%= form.label :published_at, style: "display: block" %>
-    <%= form.datetime_field :published_at %>
-  </div>
+<!--  <div>-->
+    <%#= form.label :published_at, style: "display: block" %>
+    <%#= form.date_field :published_at %>
+<!--  </div>-->
 
-  <div>
-    <%= form.label :modified_at, style: "display: block" %>
-    <%= form.datetime_field :modified_at %>
-  </div>
+<!--  <div>-->
+    <%#= form.label :modified_at, style: "display: block" %>
+    <%#= form.date_field :modified_at %>
+<!--  </div>-->
 
   <div>
     <%= form.label :published, style: "display: block" %>
