--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -1,3 +1,3 @@
-<h1>On the Rails</h1>
+<h1 class="text-center">On the Rails</h1>
 
-<h2>Topics on Ruby and Rails</h2>
+<h2 class="text-center">Topics on Ruby and Rails</h2>
