Style static pages
Signed-off-by: mc962 <11969409+mc962@users.noreply.github.com>

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,8 @@
-<h1>About On the Rails</h1>
+<h1 class="text-center">About On the Rails</h1>
 
-<p>
+<p class="p-4">
   On the Rails is my personal blog site about things that I find technically interesting enough to write about. It mainly
   focuses on topics related to Rails and Ruby, but at times I may write additional posts on other interesting topics.
 </p>
 
-<%= link_to 'Roadmap', roadmap_path %>
+<%= link_to 'Roadmap', roadmap_path, class: "p-4" %>
