--- a/app/views/pages/attributions.html.erb
+++ b/app/views/pages/attributions.html.erb
@@ -1,15 +1,15 @@
-<h1>Attributions</h1>
+<h1 class="text-center">Attributions</h1>
 
-<p>The following are miscellaneous attributions for various assets and works as requested by their licenses:</p>
+<p class="p-4">The following are miscellaneous attributions for various assets and works as requested by their licenses:</p>
 
-<table>
-  <thead>
+<table class="p-4">
+  <thead class="p-4">
     <tr>
-      <th>Asset(s)</th>
-      <th>License(s)</th>
+      <th class="p-4">Asset(s)</th>
+      <th class="p-4">License(s)</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody class="p-4">
     <tr>
       <td>
         <ul>
