--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,10 +1,11 @@
-<h1>Content Roadmap</h1>
+<h1 class="text-center">Content Roadmap</h1>
 
-<h2>So many topics, so little time...</h2>
+<h2 class="text-center">So many topics, so little time...</h2>
 
-<p>Here are some topics that I plan to write about:</p>
+<h3 class="p-4">Here are some topics that I plan to write about:</h3>
 
-<ul>
+<ul class="mx-auto">
   <li>Handling Static Assets in Rails 7</li>
   <li>Organizing a Complex Rails Project</li>
+  <li>Hotwire</li>
 </ul>
