--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,12 +9,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to 'Home', posts_path, class: 'nav-link active' %>
+            <%= link_to 'Home', root_path, class: 'nav-link active' %>
+          </li>
+          <li class="nav-item">
           </li>
           <% if user_signed_in? %>
-            <li class="nav-item">
-             <%= link_to 'Posts', posts_path, class: 'nav-link' %>
-            </li>
             <li class="nav-item">
               <%= link_to 'Logout', destroy_user_session_path, class: 'nav-link', data: {turbo_method: :delete} %>
             </li>
