--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
             <%= link_to 'Home', root_path, class: 'nav-link active' %>
           </li>
           <li class="nav-item">
+            <%= link_to 'Posts', posts_path, class: 'nav-link' %>
           </li>
           <% if user_signed_in? %>
             <li class="nav-item">
