--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,42 +1,41 @@
-<%= form_with(model: post) do |form| %>
+<%= form_with(model: post, html: {class: 'auth-form'}) do |form| %>
   <% if post.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
+    <div class="my-4">
+      <h6 class="text-danger"><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h6>
       <ul>
         <% post.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <li class="text-danger"><%= error.full_message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+  <div class="field my-4">
+    <%= form.label :title, class: 'form-label' %>
+    <%= form.text_field :title, class: 'form-control' %>
   </div>
 
-  <div>
-    <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
+  <div class="field my-4">
+    <%= form.label :content, class: 'form-label' %>
+    <%= form.rich_text_area :content, class: 'form-control' %>
   </div>
 
 <!--  <div>-->
-    <%#= form.label :published_at, style: "display: block" %>
+    <%#= form.label :published_at, class: 'form-label' %>
     <%#= form.date_field :published_at %>
 <!--  </div>-->
 
 <!--  <div>-->
-    <%#= form.label :modified_at, style: "display: block" %>
+    <%#= form.label :modified_at, class: 'form-label' %>
     <%#= form.date_field :modified_at %>
 <!--  </div>-->
 
-  <div>
-    <%= form.label :published, style: "display: block" %>
-    <%= form.check_box :published %>
+  <div class="field my-4">
+    <%= form.label :published, class: 'form-label' %>
+    <%= form.check_box :published, class: 'form-control-checkbox' %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="my-4">
+    <%= form.submit 'Save Post', class: 'btn btn-primary' %>
   </div>
 <% end %>
