--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: post, html: {class: 'auth-form'}) do |form| %>
+<%= form_with(model: post, html: {class: 'standard-form'}) do |form| %>
   <% if post.errors.any? %>
     <div class="my-4">
       <h6 class="text-danger"><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h6>
