--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2 class="text-center">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'auth-form', data: {turbo: false}}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'standard-form', data: {turbo: false}}) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field my-4">
