Update posts ui
Signed-off-by: mc962 <11969409+mc962@users.noreply.github.com>

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,27 @@
 .back-link {
   width: 70%;
 }
+
+.directory-list {
+  width: 70%;
+}
+
+.pagination-info {
+  width: 70%;
+}
+
+.standard-centered {
+  width: 70%;
+  margin: 0 auto
+}
+
+.post-content {
+  height: 80vh;
+
+  border: 1px solid black;
+}
+
+.date-cell {
+  width: 30%;
+  padding: 3%;
+}
