--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -4,7 +4,13 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
-</div>
+<section class="p-4 d-flex flex-direction-row justify-content-center">
+  <ul class="post-action-links list-group list-group-horizontal">
+    <li class="post-action-link list-group-item">
+      <%= link_to "Show this post", @post, class: 'lh-lg' %>
+    </li>
+    <li class="post-action-link list-group-item">
+      <%= link_to "Back to posts", posts_path, class: 'lh-lg' %>
+    </li>
+  </ul>
+</section>
