--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,7 +17,7 @@
 
   <div class="field my-4">
     <%= form.label :content, class: 'form-label' %>
-    <%= form.rich_text_area :content, class: 'form-control' %>
+    <%= form.rich_text_area :content, class: 'form-control overflow-auto' %>
   </div>
 
 <!--  <div>-->
